Fixed save problem, fixed popup label size

--- a/cloning/gui_utils/recording.ui
+++ b/cloning/gui_utils/recording.ui
@@ -108,12 +108,9 @@
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="QLabel" name="sentence_label">
-           <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:26pt;&quot;&gt;Text to read&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignCenter</set>
+          <widget class="QTextEdit" name="text_area">
+           <property name="styleSheet">
+            <string notr="true">background-color:rgba(255, 255, 255, 0)</string>
            </property>
           </widget>
          </item>
