Fixed opening projects from gui

--- a/cloning/gui_utils/start.ui
+++ b/cloning/gui_utils/start.ui
@@ -101,7 +101,7 @@
            <enum>Qt::LeftToRight</enum>
           </property>
           <property name="text">
-           <string>Voice Cloning Environment</string>
+           <string>Voice Dataset Creator</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
